# binary_storage

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
include/: binary_storage.hpp
include/serde/: macros.hpp  serde.hpp  traits.hpp
include/storage/: AutoStorage.hpp  Parameters.hpp  Storage.hpp  ValueStorage.hpp
test/: CMakeLists.txt  Test.Value.cpp  Test.deserialize.cpp  Test.serializeTypeSizes.cpp
third_praty/: .gitmodules
